# ai-applications-development-from-api-to-agents

./: README.md  commands.md  pyproject.toml  requirements.txt
commons/: constants.py
commons/models/: conversation.py  message.py
t10_mcp_advanced/: README.md  mcp_custom.postman_collection.json
t10_mcp_advanced/agent/: agent.py  app.py
t10_mcp_advanced/mcp_server/: server.py  ums_mcp_server.py
t11_mcp_auth/: README.md  docker-compose.yml  oauth_request_flow.html
t11_mcp_auth/agent/: _agent.py  app.py
t11_mcp_auth/keycloak/: mcp-realm-config.json
t11_mcp_auth/mcp_server/: _server.py  api_key_mcp_server.py  oauth_mcp_server.py
t12_skills/: README.md  anthropic_app.py  docker-compose.yml  openai_app.py
t12_skills/custom/: agent.py  custom_app.py
t13_final_task/: README.md  docker-compose.yml
t13_final_task/task/: index.html
t1_llm_api/: README.md  aa_openai_test.ipynb  base_app.py  base_client.py  constants.py  dial-ai-course.postman_collection.json
t1_llm_api/_models/: conversation.py  message.py  role.py
t1_llm_api/anthropic/: anthropic_app.py  client.py  custom_client.py
t1_llm_api/gemini/: client.py  custom_client.py  (+1 more)
t2_llms_output_tuning/: README.md  _main.py  anthropic_task.py  gemini_task.py  openai_chat_completions_task.py  openai_responses_task.py  openai_task.py
t3_content_generation/: _openai_client.py
t4_rag_fundamentals/: README.md  app.py
t5_rag_advanced/: README.md  app.py  docker-compose.yml  init.sql
t6_grounding/: README.md
t7_guardrails/: README.md
t8_agent/: README.md
t9_mcp_fundamentals/: README.md
(+90 files in other folders)
