[project]
name = "ai-applications-development-from-api-to-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "fastmcp>=3.2.4",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "openai>=2.32.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "protobuf>=7.34.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests>=2.33.1",
]
